# friendgrow

./: .env  .gitignore  Cargo.toml  README.md
migrations/2021-10-15-230242_create_friends/: up.sql
migrations/2021-10-26-214520_days_to_weeks/: down.sql  up.sql
migrations/2021-10-27-224206_add-location/: down.sql  up.sql
src/: commands.rs  dates.rs  db.rs  main.rs  models.rs  schema.rs  upcoming.rs
