[package]
name = "friendgrow"
description = "Grow your friendships by tracking which friends to see soon"
license = "GPL-3.0"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.45"
chrono = "0.4.19"
diesel = { version = "1.4.8", features = [ "sqlite" ] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
structopt = "0.3.23"
strum = { version = "0.23.0", features = ["derive"] }
priority-queue = "1.2.0"
prettytable-rs = "0.8.0"